--- a/source/webapp/templates/base.html
+++ b/source/webapp/templates/base.html
@@ -12,7 +12,14 @@
     {% block styles %}{% endblock %}
 </head>
 <body>
-{% block menu %}{% endblock %}
+<nav class="navbar">
+   <div class="container">
+       <ul class="menu">
+            <li class="menu-right">Hi!</li>
+           {% block menu %}{% endblock %}
+       </ul>
+   </div>
+</nav>
 <div class="container">
     {% block content %}{% endblock %}
 </div>
