--- a/source/accounts/templates/login.html
+++ b/source/accounts/templates/login.html
@@ -1,34 +1,28 @@
-{% load staticfiles %}
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <title>account login</title>
-</head>
-<body>
-<div class="container_login">
-    <h1>account login</h1>
-    <form action="{% url 'accounts:login' %}" method="post" class="text-center">
-        {% csrf_token %}
-    <input type="hidden" name="next" value="{{ next }}">
-        {% if has_error %}
-            <p class="form-error">The username or password you entered is incorrect.</p>
-        {% endif %}
-        <div class="form-group">
-            <label for="username" class="form-label">Username:</label>
-            <input type="text" name="username" id="username" class="form-control">
+{% extends "base.html" %}
+{% load widget_tweaks %}
+{% block title %}Вход{% endblock %}
+{% block content %}
+    <div class="row">
+        <div class="col col-sm-12 col-md-10 col-lg-8 col-xl-6 m-auto">
+            <h1 class="text-center">Вход</h1>
+            <form action="{% url 'accounts:login' %}?next={{ next }}" method="post">
+                {% csrf_token %}
+                <input type="hidden" name="next" value="{{ next }}">
+                {% if form.non_field_errors %}
+                    <p class="text-danger">Неверное имя пользователя или пароль.</p>
+                {% endif %}
+                <div class="form-group">
+                    <label for="{{ form.username.id_for_label }}" class="form-label">Имя пользователя:</label>
+                    <input type="text" name="username" id="username" class="form-control">
+                    {{ form.username|add_class:"form-control" }}
+                </div>
+                <div class="form-group">
+                    <label for="{{ form.password.id_for_label }}" class="form-label">Пароль:</label>
+                    <input type="password" name="password" id="password" class="form-control">
+                    {{ form.password|add_class:"form-control" }}
+                </div>
+                <button type="submit" class="btn btn-primary">Войти</button>
+            </form>
         </div>
-        <div class="form-group">
-            <label for="password" class="form-label">password:</label>
-            <input type="password" name="password" id="password" class="form-control">
-        </div>
-        <button type="submit" class="action-btn">login to account</button>
-    </form>
-    <p class="text-center"><a href="{% url "webapp:index" %}" class="action-btn">to Home Page</a></p>
-</div>
-</body>
-</html>
+    </div>
+{% endblock %}
