--- a/source/accounts/templates/register.html
+++ b/source/accounts/templates/register.html
@@ -3,6 +3,6 @@
 {% block content %}
     <h1>Sign Up</h1>
     <form action="{% url 'accounts:register' %}" method="post" class="text-center">
-        {% include 'partial/tracker_form.html' with button_text='Сохранить' %}
+        {% include 'partial/form_for_news.html' with button_text='Сохранить' %}
     </form>
 {% endblock %}
