--- a/source/accounts/templates/user_password_change.html
+++ b/source/accounts/templates/user_password_change.html
@@ -7,6 +7,6 @@
 {% block content %}
     <h1>Change Password</h1>
     <form action="{% url "accounts:password_change" user_obj.pk %}" method="post">
-        {% include 'partial/tracker_form.html' %}
+        {% include 'partial/form_for_news.html' %}
     </form>
 {% endblock %}
