--- a/source/webapp/templates/base.html
+++ b/source/webapp/templates/base.html
@@ -15,7 +15,22 @@
 <nav class="navbar">
    <div class="container">
        <ul class="menu">
-            <li class="menu-right">Hi!</li>
+             {% if request.user.is_authenticated %}
+                <li class="nav-item"><a href="{% url 'accounts:detail' request.user.pk %}" class="nav-link">
+                    Привет, {{ request.user.username }}!
+                </a></li>
+                <li class="nav-item"><a href="{% url 'accounts:logout' %}" class="nav-link">Выход</a></li>
+                 <li><a href="{% url 'application' %}" class="action-btn nav-link">Заявки</a></li>
+                 <li><a href="{% url 'news_add' %}" class="action-btn nav-link">crate news</a></li>
+                 <li><a href="{% url 'application_search' %}" class="btn btn2">Search</a></li>
+            {% else %}
+                <li class="nav-item"><a href="{% url 'accounts:register' %}" class="nav-link">Регистрация</a></li>
+                <li class="nav-item"><a href="{% url 'accounts:login' %}" class="nav-link">Вход</a></li>
+            {% endif %}
+           <li><a href="{% url 'index' %}" class="action-btn nav-link">Главная</a></li>
+
+           <li><a href="{% url 'application_add' %}" class="action-btn nav-link">отправить заявку на помощь</a></li>
+
            {% block menu %}{% endblock %}
        </ul>
    </div>
@@ -23,10 +38,10 @@
 <div class="container">
     {% block content %}{% endblock %}
 </div>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<script type="application/javascript" src="{% static "js/main.js" %}"></script>
+<script src="{% static 'js/jquery.min.js' %}"></script>
+<script src="{% static 'js/popper.min.js' %}"></script>
+<script src="{% static 'js/bootstrap.min.js' %}"></script>
+<script src="{% static 'js/main.js' %}"></script>
 {% block scripts %}{% endblock %}
 </body>
 </html>
